--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Westlake Real Estate | Tiffany Price</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
+    <meta property="og:image" content="https://www.yourwestlakeguide.com/hero_marquee.jpg" />
+    <meta property="og:title" content="Tiffany Price | Westlake Real Estate" />
+    <meta property="og:description" content="Your guide to buying and selling in Westlake, Austin." />
+    <meta property="og:url" content="https://www.yourwestlakeguide.com" />
+    <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="twitter:image" content="https://www.yourwestlakeguide.com/hero_marquee.jpg" />
   </head>
   <body>
     <div id="root"></div>
